[gd_scene load_steps=24 format=3 uid="uid://cvpopa107re6g"]

[ext_resource type="Script" uid="uid://cu07qd0smarvj" path="res://main.gd" id="1_c4cag"]
[ext_resource type="Shader" path="res://star_bg_1.gdshader" id="2_5q42u"]
[ext_resource type="Script" uid="uid://d0yuuatbtexiq" path="res://blackhole.gd" id="3_ij5mv"]
[ext_resource type="Texture2D" uid="uid://ixparnytkd4l" path="res://Assets/circle.png" id="4_r63ls"]
[ext_resource type="PackedScene" uid="uid://5pkj5t0rttfq" path="res://Gravity/DNU/gravity_well.tscn" id="5_gol01"]
[ext_resource type="Script" uid="uid://eofade53c0ol" path="res://Launcher/drag_input_controller.gd" id="6_nq2pl"]
[ext_resource type="Texture2D" uid="uid://bpmk638758mfa" path="res://Assets/astroids/a_lg_1.png" id="7_0jn5y"]
[ext_resource type="Texture2D" uid="uid://bgud52eak5wov" path="res://Assets/astroids/a_lg_2.png" id="8_2ctjd"]
[ext_resource type="Texture2D" uid="uid://ccrwpfe6ywpc" path="res://Assets/astroids/a_lg_3.png" id="9_i2qcs"]
[ext_resource type="Texture2D" uid="uid://d1g2klsm0e82" path="res://Assets/astroids/a_lg_4.png" id="10_7k3ew"]
[ext_resource type="Texture2D" uid="uid://j33rq6ignoj5" path="res://Assets/astroids/a_sm_1.png" id="11_lqu4s"]
[ext_resource type="Texture2D" uid="uid://bdl827h4vqriu" path="res://Assets/astroids/a_sm_2.png" id="12_dubtt"]
[ext_resource type="Texture2D" uid="uid://b62sysd3impts" path="res://Assets/astroids/a_sm_3.png" id="13_nm2fh"]
[ext_resource type="Texture2D" uid="uid://t5gd0n8bd11a" path="res://Assets/astroids/a_sm_4.png" id="14_qpl6e"]
[ext_resource type="Texture2D" uid="uid://wwwwuxee4qn0" path="res://Assets/planets/p1.png" id="15_pa884"]
[ext_resource type="Texture2D" uid="uid://bvjnr8qrib0ql" path="res://Assets/planets/p2.png" id="16_skuwm"]
[ext_resource type="Texture2D" uid="uid://pfxp52jd3mrp" path="res://Assets/planets/p3.png" id="17_7f7xf"]
[ext_resource type="Texture2D" uid="uid://dliwcih7bhrdw" path="res://Assets/planets/p5.png" id="18_l588w"]
[ext_resource type="Texture2D" uid="uid://i43p7ddg0ufa" path="res://Assets/planets/p6.png" id="19_n2c2v"]
[ext_resource type="Texture2D" uid="uid://cqyc72q2ig1ov" path="res://Assets/planets/p7.png" id="20_b7gi0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lquwl"]
shader = ExtResource("2_5q42u")
shader_parameter/mouse = Vector2(50, 50)
shader_parameter/time = 0.0
shader_parameter/speed2 = 1.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_7mycd"]
size = Vector2(50000, 50000)

[sub_resource type="CircleShape2D" id="CircleShape2D_lquwl"]

[node name="Scene" type="Node2D"]
script = ExtResource("1_c4cag")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_lquwl")
position = Vector2(0, 178)
texture = SubResource("PlaceholderTexture2D_7mycd")
offset = Vector2(100, 100)

[node name="Drag Indiactor Line" type="Line2D" parent="."]

[node name="Blackhole" type="RigidBody2D" parent="."]
position = Vector2(552, 302)
gravity_scale = 0.0
script = ExtResource("3_ij5mv")
metadata/_edit_group_ = true

[node name="Sprite2D2" type="Sprite2D" parent="Blackhole"]
scale = Vector2(18.31, 18.31)
texture = ExtResource("4_r63ls")

[node name="Circle" type="Sprite2D" parent="Blackhole"]
modulate = Color(0, 0, 0, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_r63ls")

[node name="Gravity Well" parent="Blackhole" instance=ExtResource("5_gol01")]

[node name="Drag Input Signaller" type="Area2D" parent="Blackhole"]
script = ExtResource("6_nq2pl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blackhole/Drag Input Signaller"]
scale = Vector2(4.88002, 4.88002)
shape = SubResource("CircleShape2D_lquwl")

[node name="Camera2D" type="Camera2D" parent="Blackhole"]
position_smoothing_speed = 3.0

[node name="500" type="Node2D" parent="."]

[node name="ALg1" type="Sprite2D" parent="500"]
position = Vector2(1202, 122)
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_0jn5y")

[node name="ALg2" type="Sprite2D" parent="500"]
position = Vector2(670, -85)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_2ctjd")

[node name="ALg3" type="Sprite2D" parent="500"]
position = Vector2(1937, 580)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_i2qcs")

[node name="ALg4" type="Sprite2D" parent="500"]
position = Vector2(359, 832)
scale = Vector2(0.25, 0.25)
texture = ExtResource("10_7k3ew")

[node name="ASm1" type="Sprite2D" parent="500"]
position = Vector2(647.75, 589.75)
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_lqu4s")

[node name="ASm2" type="Sprite2D" parent="500"]
position = Vector2(842.75, 268.75)
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_dubtt")

[node name="ASm3" type="Sprite2D" parent="500"]
position = Vector2(937.75, 61.75)
scale = Vector2(0.15, 0.15)
texture = ExtResource("13_nm2fh")

[node name="ASm4" type="Sprite2D" parent="500"]
position = Vector2(419.75, 496.75)
scale = Vector2(0.15, 0.15)
texture = ExtResource("14_qpl6e")

[node name="ALg5" type="Sprite2D" parent="500"]
position = Vector2(-37, -181)
rotation = -4.35706
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_0jn5y")

[node name="ALg6" type="Sprite2D" parent="500"]
position = Vector2(349, -13)
rotation = -1.64643
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_2ctjd")

[node name="ALg7" type="Sprite2D" parent="500"]
position = Vector2(1267, 413)
rotation = -1.64643
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_i2qcs")

[node name="ALg8" type="Sprite2D" parent="500"]
position = Vector2(835, 522)
rotation = -1.64643
scale = Vector2(0.25, 0.25)
texture = ExtResource("10_7k3ew")

[node name="ASm5" type="Sprite2D" parent="500"]
position = Vector2(471, 705)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_lqu4s")

[node name="ASm6" type="Sprite2D" parent="500"]
position = Vector2(291, 218)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_dubtt")

[node name="ASm7" type="Sprite2D" parent="500"]
position = Vector2(679.25, 249.25)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("13_nm2fh")

[node name="ASm8" type="Sprite2D" parent="500"]
position = Vector2(161.25, 684.25)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("14_qpl6e")

[node name="ALg9" type="Sprite2D" parent="500"]
position = Vector2(-246.661, 738.339)
rotation = 2.21544
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_0jn5y")

[node name="ALg10" type="Sprite2D" parent="500"]
position = Vector2(-778.661, 531.339)
rotation = 2.21544
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_2ctjd")

[node name="ALg11" type="Sprite2D" parent="500"]
position = Vector2(488.339, 1196.34)
rotation = 2.21544
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_i2qcs")

[node name="ALg12" type="Sprite2D" parent="500"]
position = Vector2(-1089.66, 1448.34)
rotation = 2.21544
scale = Vector2(0.25, 0.25)
texture = ExtResource("10_7k3ew")

[node name="ASm9" type="Sprite2D" parent="500"]
position = Vector2(-800.911, 1206.09)
rotation = 2.21544
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_lqu4s")

[node name="ASm10" type="Sprite2D" parent="500"]
position = Vector2(-605.911, 885.089)
rotation = 2.21544
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_dubtt")

[node name="ASm11" type="Sprite2D" parent="500"]
position = Vector2(-510.911, 678.089)
rotation = 2.21544
scale = Vector2(0.15, 0.15)
texture = ExtResource("13_nm2fh")

[node name="ASm12" type="Sprite2D" parent="500"]
position = Vector2(-1028.91, 1113.09)
rotation = 2.21544
scale = Vector2(0.15, 0.15)
texture = ExtResource("14_qpl6e")

[node name="ALg13" type="Sprite2D" parent="500"]
position = Vector2(-1485.66, 435.339)
rotation = -2.14162
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_0jn5y")

[node name="ALg14" type="Sprite2D" parent="500"]
position = Vector2(-1099.66, 603.339)
rotation = 0.569009
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_2ctjd")

[node name="ALg15" type="Sprite2D" parent="500"]
position = Vector2(-181.66, 1029.34)
rotation = 0.569009
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_i2qcs")

[node name="ALg16" type="Sprite2D" parent="500"]
position = Vector2(-613.661, 1138.34)
rotation = 0.569009
scale = Vector2(0.25, 0.25)
texture = ExtResource("10_7k3ew")

[node name="ASm13" type="Sprite2D" parent="500"]
position = Vector2(-977.661, 1321.34)
rotation = 0.569009
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_lqu4s")

[node name="ASm14" type="Sprite2D" parent="500"]
position = Vector2(-1157.66, 834.339)
rotation = 0.569009
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_dubtt")

[node name="ASm15" type="Sprite2D" parent="500"]
position = Vector2(-769.411, 865.589)
rotation = 0.569009
scale = Vector2(0.15, 0.15)
texture = ExtResource("13_nm2fh")

[node name="ASm16" type="Sprite2D" parent="500"]
position = Vector2(-1287.41, 1300.59)
rotation = 0.569009
scale = Vector2(0.15, 0.15)
texture = ExtResource("14_qpl6e")

[node name="ALg17" type="Sprite2D" parent="500"]
position = Vector2(1754.06, -892.942)
rotation = 2.63158
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_0jn5y")

[node name="ALg18" type="Sprite2D" parent="500"]
position = Vector2(1222.06, -1099.94)
rotation = 2.63158
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_2ctjd")

[node name="ALg19" type="Sprite2D" parent="500"]
position = Vector2(2489.06, -434.942)
rotation = 2.63158
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_i2qcs")

[node name="ALg20" type="Sprite2D" parent="500"]
position = Vector2(911.058, -182.942)
rotation = 2.63158
scale = Vector2(0.25, 0.25)
texture = ExtResource("10_7k3ew")

[node name="ASm17" type="Sprite2D" parent="500"]
position = Vector2(1199.81, -425.192)
rotation = 2.63158
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_lqu4s")

[node name="ASm18" type="Sprite2D" parent="500"]
position = Vector2(1394.81, -746.192)
rotation = 2.63158
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_dubtt")

[node name="ASm19" type="Sprite2D" parent="500"]
position = Vector2(1489.81, -953.192)
rotation = 2.63158
scale = Vector2(0.15, 0.15)
texture = ExtResource("13_nm2fh")

[node name="ASm20" type="Sprite2D" parent="500"]
position = Vector2(971.808, -518.192)
rotation = 2.63158
scale = Vector2(0.15, 0.15)
texture = ExtResource("14_qpl6e")

[node name="ASm21" type="Sprite2D" parent="500"]
position = Vector2(1081.86, 1224.11)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_lqu4s")

[node name="ASm22" type="Sprite2D" parent="500"]
position = Vector2(901.863, 737.113)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_dubtt")

[node name="ASm23" type="Sprite2D" parent="500"]
position = Vector2(1290.11, 768.363)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("13_nm2fh")

[node name="ASm24" type="Sprite2D" parent="500"]
position = Vector2(772.113, 1203.36)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("14_qpl6e")

[node name="ASm25" type="Sprite2D" parent="500"]
position = Vector2(-86.1368, 482.113)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_lqu4s")

[node name="ASm26" type="Sprite2D" parent="500"]
position = Vector2(-266.137, -4.88686)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_dubtt")

[node name="ASm27" type="Sprite2D" parent="500"]
position = Vector2(122.113, 26.3632)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("13_nm2fh")

[node name="ASm28" type="Sprite2D" parent="500"]
position = Vector2(-395.887, 461.363)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("14_qpl6e")

[node name="ASm29" type="Sprite2D" parent="500"]
position = Vector2(97.8632, 1699.11)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_lqu4s")

[node name="ASm30" type="Sprite2D" parent="500"]
position = Vector2(-82.1368, 1212.11)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_dubtt")

[node name="ASm31" type="Sprite2D" parent="500"]
position = Vector2(306.113, 1243.36)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("13_nm2fh")

[node name="ASm32" type="Sprite2D" parent="500"]
position = Vector2(-211.887, 1678.36)
rotation = -1.64643
scale = Vector2(0.15, 0.15)
texture = ExtResource("14_qpl6e")

[node name="Planets" type="Node2D" parent="."]

[node name="P1" type="Sprite2D" parent="Planets"]
position = Vector2(-989, 90)
scale = Vector2(1.49, 1.49)
texture = ExtResource("15_pa884")

[node name="P2" type="Sprite2D" parent="Planets"]
position = Vector2(1639, 1626)
scale = Vector2(1.49, 1.49)
texture = ExtResource("16_skuwm")

[node name="P3" type="Sprite2D" parent="Planets"]
position = Vector2(1796, -1168)
scale = Vector2(1.49, 1.49)
texture = ExtResource("17_7f7xf")

[node name="P5" type="Sprite2D" parent="Planets"]
position = Vector2(268, -1141)
scale = Vector2(1.49, 1.49)
texture = ExtResource("18_l588w")

[node name="P6" type="Sprite2D" parent="Planets"]
position = Vector2(-722, 1946)
scale = Vector2(1.49, 1.49)
texture = ExtResource("19_n2c2v")

[node name="P7" type="Sprite2D" parent="Planets"]
position = Vector2(2541, 33)
scale = Vector2(1.49, 1.49)
texture = ExtResource("20_b7gi0")

[connection signal="handle_drag" from="Blackhole/Drag Input Signaller" to="Blackhole" method="_handle_drag"]
[connection signal="on_drag_start" from="Blackhole/Drag Input Signaller" to="Blackhole" method="_on_drag_start"]
[connection signal="on_drop" from="Blackhole/Drag Input Signaller" to="Blackhole" method="_on_launch"]
